--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,14 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 greenlet==3.2.2
 idna==3.10
+numpy==2.2.6
+pandas==2.2.3
 playwright==1.52.0
 pyee==13.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.3
+six==1.17.0
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
